style: fix case img sometime not align center

--- a/src/slots/Cases/index.module.less
+++ b/src/slots/Cases/index.module.less
@@ -18,7 +18,8 @@
     width: 83.88%;
     height: 100%;
     overflow-y: hidden;
-    display: flex;
+    display: flex !important;
+    align-items: center;
 
     .appLeft {
       margin-left: 3.06%;
